--- a/web/src/index.html
+++ b/web/src/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="output-area">
-        <a>여기에 텍스트가 들어갑니다</a>
+        <a>사진을 올려야 평가를 하든 머든 하죠 이건 뭐 저랑 싸우자는 건가요?</a>
       </div>
     </div>
 
