--- a/FE/my-react-app/index.html
+++ b/FE/my-react-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>도형을 맞춰봐요!</title>
+    <title>GeomeBattle</title>
     <link rel="icon" type="image/png" href="/assets/img/icon.png" />
   </head>
   <body>
